--- a/Amazon.ipynb
+++ b/Amazon.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0r+FrEI2td17bJ8fR0p9b",
+      "authorship_tag": "ABX9TyPI2xl8uJS5eFkkq/smzMGn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,35 +49,60 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Project Summary\n",
-        "should be like this:\n",
-        "Data Preprocessing :\n",
+        "## **Project Summary**  \n",
         "\n",
-        "Getting the dataset\n",
+        "### **1. Getting the Dataset**  \n",
         "\n",
-        "Importing libraries\n",
+        "### **2. Importing Libraries**  \n",
         "\n",
-        "Importing datasets\n",
+        "### **3. Importing Datasets**  \n",
         "\n",
-        "Finding Missing Data\n",
+        "## **Data Cleaning & Preprocessing**  \n",
         "\n",
-        "Encoding Categorical Data\n",
+        "### **4. Duplicate Values**  \n",
+        "- Checked and removed duplicates.  \n",
         "\n",
-        "Data Cleaning and Feature Engineering\n",
+        "### **5. Missing Values**  \n",
+        "- Identified missing data.  \n",
         "\n",
-        "Exploratory data analysis(EDA) :\n",
+        "### **6. Data Wrangling**  \n",
+        "- Performed necessary transformations.  \n",
         "\n",
-        "1.Firstly Checked correlation between Each Features in dataset.\n",
+        "### **7. Handling Missing Values**  \n",
+        "- Imputed missing values.  \n",
         "\n",
-        "2.Checked if bluetooth and wifi available or not???\n",
+        "### **8. Removing Duplicates**  \n",
+        "- Removed redundant data points.  \n",
         "\n",
-        "3.Checked can Battery Power be affected in mobile Price?? and how the battery mAh is spread\n",
+        "## **Exploratory Data Analysis (EDA)**  \n",
         "\n",
-        "4.Checked can Ram, Screen Height ,Screen width,pixel Height ,pixel width be affected in mobile Price??\n",
+        "### **9. Distribution of IMDb Scores**  \n",
         "\n",
-        "5.Checked can 4G and 3G be affected in mobile Price??\n",
+        "### **10. Top 10 Common Genres**  \n",
         "\n",
-        "6.Checked can FC (front camera megapixels) ,PC (Primary camera Megapixels) and Mobile Weight affected in mobile Price??"
+        "### **11. Distribution of Movies vs. TV Shows**  \n",
+        "\n",
+        "### **12. IMDb Score vs. Runtime**  \n",
+        "\n",
+        "### **13. IMDb Score by Primary Genre (Top 10)**  \n",
+        "\n",
+        "### **14. Number of Titles Released Over the Years**  \n",
+        "\n",
+        "### **15. Pairplot**  \n",
+        "\n",
+        "### **16. Where Are Most Movies Produced?**  \n",
+        "\n",
+        "### **17. Most Common Words in Descriptions**  \n",
+        "\n",
+        "### **18. Heatmap**  \n",
+        "\n",
+        "### **19. Role Distribution in the Dataset**  \n",
+        "\n",
+        "### **20. Most Commonly Played Character Names**  \n",
+        "\n",
+        "## **Solutions to Business Objectives**  \n",
+        "\n",
+        "## **Conclusion**  "
       ],
       "metadata": {
         "id": "2Di03KLZEntl"
@@ -755,7 +780,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data PreProccessing"
+        "# Data Wrangling"
       ],
       "metadata": {
         "id": "hxKlxkqMRp8r"
@@ -2032,6 +2057,41 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Solutions to Business Objectives\n",
+        "Understanding Popular Content\n",
+        "\n",
+        "Identified frequently played characters, top actors, and the distribution of roles (actors vs. directors).\n",
+        "Insights can help Amazon optimize casting choices and market high-demand actors/roles.\n",
+        "Evaluating IMDb and TMDb Ratings\n",
+        "\n",
+        "Analyzed the correlation between different ratings, revealing that IMDb and TMDb scores have a strong positive correlation (0.58).\n",
+        "Helps Amazon prioritize content acquisition and recommendation based on user preference patterns.\n",
+        "Genre & Runtime Analysis\n",
+        "\n",
+        "Determined which genres are most frequent and analyzed runtime distributions.\n",
+        "Can assist in deciding the optimal length and genres for future investments.\n",
+        "Actor & Director Analysis\n",
+        "\n",
+        "Examined top actors and directors based on frequency in titles.\n",
+        "Helps Amazon Prime Video in promotional campaigns and content licensing decisions."
+      ],
+      "metadata": {
+        "id": "9smaJ23V48_N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Conclusion\n",
+        "The analysis provides valuable insights into Amazon’s content library, helping optimize acquisitions, improve user engagement, and enhance recommendation systems. Future enhancements could include sentiment analysis of reviews and trend forecasting for better strategic planning."
+      ],
+      "metadata": {
+        "id": "r30T4xMg5ZRl"
+      }
     }
   ]
 }
