--- a/Amazon.ipynb
+++ b/Amazon.ipynb
@@ -39,7 +39,7 @@
         "JK-XCJrkOH30",
         "GC3ObdSAOADW"
       ],
-      "authorship_tag": "ABX9TyNINJEfWjNHjl4qygl4LG85",
+      "authorship_tag": "ABX9TyOkbrZii4k1m4EMVlsej8LV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,7 +66,8 @@
       "source": [
         "# **Project Name**\n",
         "$\\color{blue}{\\text{Amazon Prime TV Shows and Movies}}$\n",
-        "\n"
+        "\n",
+        "Name - R Manisha Achary"
       ],
       "metadata": {
         "id": "wQJW-TQb_NZX"
